--- a/code.html
+++ b/code.html
@@ -33,7 +33,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="code_files/libs/quarto-html/quarto-syntax-highlighting-37eea08aefeeee20ff55810ff984fec1.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="code_files/libs/bootstrap/bootstrap.min.js"></script>
 <link href="code_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="code_files/libs/bootstrap/bootstrap-8a894fcc3cb5e37eb5bf30def131be2f.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="code_files/libs/bootstrap/bootstrap-581f27d426c1470dc0c08eeacc1c9377.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
@@ -51,8 +51,8 @@ ul.task-list li input[type="checkbox"] {
 
 
 
-<div class="navbar">
-<p><a href="index.html">Accueil</a> | <a href="bibliographie.html">Bibliographie</a> |</p>
+<div class="navbar p-3">
+<p><a href="index.html" class="me-4 ms-4">Accueil</a> <a href="bibliographie.html" class="me-4 ms-4">Bibliographie</a></p>
 </div>
 
 </main>
