--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="index_files/libs/quarto-html/quarto-syntax-highlighting-37eea08aefeeee20ff55810ff984fec1.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="index_files/libs/bootstrap/bootstrap.min.js"></script>
 <link href="index_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="index_files/libs/bootstrap/bootstrap-8a894fcc3cb5e37eb5bf30def131be2f.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="index_files/libs/bootstrap/bootstrap-581f27d426c1470dc0c08eeacc1c9377.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
@@ -65,8 +65,8 @@ ul.task-list li input[type="checkbox"] {
 
 
 
-<div class="navbar">
-<p><a href="bibliographie.html">Bibliographie</a> | <a href="code.html">Code</a> |</p>
+<div class="navbar p-3">
+<p><a href="bibliographie.html" class="me-4 ms-4">Bibliographie</a> <a href="code.html" class="me-4 ms-4">Code</a></p>
 </div>
 <section id="titre-1" class="level1">
 <h1>Titre 1</h1>
