--- a/index.html
+++ b/index.html
@@ -46,15 +46,12 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Accueil</h2>
    
   <ul class="collapse">
-  <li><a href="#titre-1" id="toc-titre-1" class="nav-link active" data-scroll-target="#titre-1">Titre 1</a>
+  <li><a href="#erreur" id="toc-erreur" class="nav-link active" data-scroll-target="#erreur">erreuR</a>
   <ul class="collapse">
-  <li><a href="#test-1.1" id="toc-test-1.1" class="nav-link" data-scroll-target="#test-1.1">Test 1.1</a></li>
-  </ul></li>
-  <li><a href="#titre-2" id="toc-titre-2" class="nav-link" data-scroll-target="#titre-2">Titre 2</a>
-  <ul class="collapse">
-  <li><a href="#test-2.1" id="toc-test-2.1" class="nav-link" data-scroll-target="#test-2.1">Test 2.1</a></li>
-  </ul></li>
+  <li><a href="#images-empreintes-et-supports" id="toc-images-empreintes-et-supports" class="nav-link" data-scroll-target="#images-empreintes-et-supports">Images, empreintes et supports</a></li>
+  <li><a href="#tectonique-de-limage-numérique" id="toc-tectonique-de-limage-numérique" class="nav-link" data-scroll-target="#tectonique-de-limage-numérique">Tectonique de l’image numérique</a></li>
   <li><a href="#titre-3" id="toc-titre-3" class="nav-link" data-scroll-target="#titre-3">Titre 3</a></li>
+  </ul></li>
   </ul>
 </nav>
 </div>
@@ -68,26 +65,22 @@ ul.task-list li input[type="checkbox"] {
 <div class="navbar p-3">
 <p><a href="bibliographie.html" class="me-4 ms-4">Bibliographie</a> <a href="code.html" class="me-4 ms-4">Code</a></p>
 </div>
-<section id="titre-1" class="level1">
-<h1>Titre 1</h1>
-<section id="test-1.1" class="level2">
-<h2 class="anchored" data-anchor-id="test-1.1">Test 1.1</h2>
+<section id="erreur" class="level1">
+<h1>erreuR</h1>
+<p>Ce projet de recherche a pour but d’explorer le potentiel pictural de l’interface graphique de R pour générer des oeuvres numériques.</p>
+<p>Je remercie Conseil des arts et des lettres du Québec qui rend ce projet possible grâce à un financement dans le cadre du volet Exploration et recherche en arts numériques.</p>
+<section id="images-empreintes-et-supports" class="level2">
+<h2 class="anchored" data-anchor-id="images-empreintes-et-supports">Images, empreintes et supports</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.</p>
 </section>
-</section>
-<section id="titre-2" class="level1">
-<h1>Titre 2</h1>
-<section id="test-2.1" class="level2">
-<h2 class="anchored" data-anchor-id="test-2.1">Test 2.1</h2>
-<section id="test-2.2" class="level3">
-<h3 class="anchored" data-anchor-id="test-2.2">Test 2.2</h3>
+<section id="tectonique-de-limage-numérique" class="level2">
+<h2 class="anchored" data-anchor-id="tectonique-de-limage-numérique">Tectonique de l’image numérique</h2>
 <p>Ut velit mauris, egestas sed, gravida nec, ornare ut, mi. Aenean ut orci vel massa suscipit pulvinar. Nulla sollicitudin. Fusce varius, ligula non tempus aliquam, nunc turpis ullamcorper nibh, in tempus sapien eros vitae ligula. Pellentesque rhoncus nunc et augue. Integer id felis. Curabitur aliquet pellentesque diam. Integer quis metus vitae elit lobortis egestas. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi vel erat non mauris convallis vehicula. Nulla et sapien. Integer tortor tellus, aliquam faucibus, convallis id, congue eu, quam. Mauris ullamcorper felis vitae erat. Proin feugiat, augue non elementum posuere, metus purus iaculis lectus, et tristique ligula justo vitae magna.</p>
 </section>
-</section>
-</section>
-<section id="titre-3" class="level1">
-<h1>Titre 3</h1>
+<section id="titre-3" class="level2">
+<h2 class="anchored" data-anchor-id="titre-3">Titre 3</h2>
 <p>Aliquam convallis sollicitudin purus. Praesent aliquam, enim at fermentum mollis, ligula massa adipiscing nisl, ac euismod nibh nisl eu lectus. Fusce vulputate sem at sapien. Vivamus leo. Aliquam euismod libero eu enim. Nulla nec felis sed leo placerat imperdiet. Aenean suscipit nulla in justo. Suspendisse cursus rutrum augue. Nulla tincidunt tincidunt mi. Curabitur iaculis, lorem vel rhoncus faucibus, felis magna fermentum augue, et ultricies lacus lorem varius purus. Curabitur eu amet.</p>
+</section>
 </section>
 
 </main>
