--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@ ul.task-list li input[type="checkbox"] {
 <section id="erreur" class="level1">
 <h1>erreuR</h1>
 <p>Ce projet de recherche a pour but d’explorer le potentiel pictural de l’interface graphique de R pour générer des oeuvres numériques.</p>
-<p>Je remercie Conseil des arts et des lettres du Québec qui rend ce projet possible grâce à un financement dans le cadre du volet Exploration et recherche en arts numériques.</p>
+<!--
+Je remercie Conseil des arts et des lettres du Québec qui rend ce projet possible grâce à un financement dans le cadre du volet Exploration et recherche en arts numériques.
+-->
 <section id="images-empreintes-et-supports" class="level2">
 <h2 class="anchored" data-anchor-id="images-empreintes-et-supports">Images, empreintes et supports</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.</p>
