--- a/bibliographie.html
+++ b/bibliographie.html
@@ -42,11 +42,25 @@ ul.task-list li input[type="checkbox"] {
 
 <div id="quarto-content" class="page-columns page-rows-contents page-layout-full toc-left">
 <div id="quarto-sidebar-toc-left" class="sidebar toc-left">
-  
+  <nav id="TOC" role="doc-toc" class="toc-active" data-toc-expanded="99">
+    <h2 id="toc-title">Bibliographie</h2>
+   
+  <ul class="collapse">
+  <li><a href="#bibliographie" id="toc-bibliographie" class="nav-link active" data-scroll-target="#bibliographie">Bibliographie</a>
+  <ul class="collapse">
+  <li><a href="#à-lire-en-priorité" id="toc-à-lire-en-priorité" class="nav-link" data-scroll-target="#à-lire-en-priorité">À lire en priorité</a></li>
+  <li><a href="#ouvrages-de-référence-sur-le-traitement-de-limage-numérique" id="toc-ouvrages-de-référence-sur-le-traitement-de-limage-numérique" class="nav-link" data-scroll-target="#ouvrages-de-référence-sur-le-traitement-de-limage-numérique">Ouvrages de référence sur le traitement de l’image numérique</a></li>
+  <li><a href="#essais-sur-limage-numérique" id="toc-essais-sur-limage-numérique" class="nav-link" data-scroll-target="#essais-sur-limage-numérique">Essais sur l’image numérique</a></li>
+  <li><a href="#essais-sur-lart-numérique-et-génératif" id="toc-essais-sur-lart-numérique-et-génératif" class="nav-link" data-scroll-target="#essais-sur-lart-numérique-et-génératif">Essais sur l’art numérique et génératif</a></li>
+  <li><a href="#essais-et-ouvrages-de-référence-sur-la-techtonique" id="toc-essais-et-ouvrages-de-référence-sur-la-techtonique" class="nav-link" data-scroll-target="#essais-et-ouvrages-de-référence-sur-la-techtonique">Essais et ouvrages de référence sur la techtonique</a></li>
+  <li><a href="#autres-incontournables" id="toc-autres-incontournables" class="nav-link" data-scroll-target="#autres-incontournables">Autres / incontournables</a></li>
+  </ul></li>
+  </ul>
+</nav>
 </div>
 <div id="quarto-margin-sidebar" class="sidebar margin-sidebar zindex-bottom">
 </div>
-<main class="content column-page" id="quarto-document-content">
+<main class="content column-page-right" id="quarto-document-content">
 
 
 
@@ -54,6 +68,62 @@ ul.task-list li input[type="checkbox"] {
 <div class="navbar p-3">
 <p><a href="index.html" class="me-4 ms-4">Accueil</a> <a href="code.html" class="me-4 ms-4">Code</a></p>
 </div>
+<section id="bibliographie" class="level1">
+<h1>Bibliographie</h1>
+<section id="à-lire-en-priorité" class="level2">
+<h2 class="anchored" data-anchor-id="à-lire-en-priorité">À lire en priorité</h2>
+<ul>
+<li><p>Manovich, L. (2001). The language of new media. MIT Press.<br>
+Bonenfant : P 96 T42 M285 2001 (3e étage - 2D)</p></li>
+<li><p>Bense, M. (2007). Aesthetica : Introduction à la nouvelle esthétique. Éd. du Cerf.<br>
+Bonenfant : BH 39 B474 2007 F (5e étage - 15D)</p></li>
+<li><p>Moles, A. A. (1972). Théorie de l’information et perception esthétique (Nouv. ed). Denoël/Gonthier.<br>
+Bonenfant : BH 221 F84 M719 1972 (5e étage - 15D)</p></li>
+</ul>
+</section>
+<section id="ouvrages-de-référence-sur-le-traitement-de-limage-numérique" class="level2">
+<h2 class="anchored" data-anchor-id="ouvrages-de-référence-sur-le-traitement-de-limage-numérique">Ouvrages de référence sur le traitement de l’image numérique</h2>
+<ul>
+<li>Gonzalez, R. C., &amp; Woods, R. E. (2008). Digital image processing (Third edition). Pearson Prentice Hall.</li>
+</ul>
+</section>
+<section id="essais-sur-limage-numérique" class="level2">
+<h2 class="anchored" data-anchor-id="essais-sur-limage-numérique">Essais sur l’image numérique</h2>
+<ul>
+<li>Manovich, L. (2001). The language of new media. MIT Press.</li>
+<li>Mitchell, W. J. (1992). The reconfigured eye : Visual truth in the post-photographic era. The MIT Press.</li>
+<li>Cubitt, S. (1998). Digital Aesthetics. SAGE Publications.</li>
+<li>Plant, S. (1998). Zeros + ones: Digital women + the new technoculture. Fourth Estate.</li>
+<li>Essinger, J. (2004). Jacquard’s web : How a hand-loom led to the birth of the information age. Oxford University Press.</li>
+</ul>
+</section>
+<section id="essais-sur-lart-numérique-et-génératif" class="level2">
+<h2 class="anchored" data-anchor-id="essais-sur-lart-numérique-et-génératif">Essais sur l’art numérique et génératif</h2>
+<ul>
+<li>Bense, M. (2007). Aesthetica : Introduction à la nouvelle esthétique. Éd. du Cerf</li>
+<li>Galanter, P. (2003). What is Generative Art ? Complexity Theory as a Context for Art Theory.</li>
+<li>Moles, A. A. (1972). Théorie de l’information et perception esthétique (Nouv. ed). Denoël/Gonthier.</li>
+<li>Rosen, M. &amp; Zentrum für Kunst und Medientechnologie Karlsruhe (Éds.). (2011). A little-known story about a movement, a magazine, and the computer’s arrival in art : New Tendencies and Bit International, 1961 - 1973. MIT Press.</li>
+<li>Galerija suvremene umjetnosti. (1968–1972). Bit International. Zagreb: Galerija suvremene umjetnosti.</li>
+</ul>
+</section>
+<section id="essais-et-ouvrages-de-référence-sur-la-techtonique" class="level2">
+<h2 class="anchored" data-anchor-id="essais-et-ouvrages-de-référence-sur-la-techtonique">Essais et ouvrages de référence sur la techtonique</h2>
+<ul>
+<li>Hegel, G. W. F., &amp; Jankélévitch, S. (1979). Esthétique. Flammarion.</li>
+<li>Semper, G. (2004). Style in the technical and tectonic arts : Or, practical aesthetics. Getty research Institute.</li>
+<li>Semper, G., Châtelet, A.-M., Gnehm, M., &amp; Biétry, L. (2020). Gottfried Semper : Écrits sur l’architecture. Infolio.</li>
+</ul>
+</section>
+<section id="autres-incontournables" class="level2">
+<h2 class="anchored" data-anchor-id="autres-incontournables">Autres / incontournables</h2>
+<ul>
+<li>Bertalanffy, L. von. (1969). General system theory foundations, development, applications. G. Braziller.</li>
+<li>Brunn, B., &amp; Posenenske, C. (Éds.). (2013). Charlotte Posenenske : Manifesto (1. Aufl). DISTANZ Verl.</li>
+<li>Semper, G., Kalinowski, I., &amp; Thibault, E. (2022). L’art textile. Editions B2.</li>
+</ul>
+</section>
+</section>
 
 </main>
 <!-- /main column -->
