biblio synchronisée par auteurs

--- a/code.html
+++ b/code.html
@@ -52,7 +52,7 @@ ul.task-list li input[type="checkbox"] {
 
 
 <div class="navbar p-3">
-<p><a href="index.html" class="me-4 ms-4">Accueil</a> <a href="bibliographie.html" class="me-4 ms-4">Bibliographie</a></p>
+<p><a href="index.html" class="me-4 ms-4">Accueil</a> <a href="bibliographie_zotero.html" class="me-4 ms-4">Bibliographie par auteur</a> <a href="bibliographie.html" class="me-4 ms-4">Bibliographie par thème</a></p>
 </div>
 
 </main>
