--- a/bibliographie.html
+++ b/bibliographie.html
@@ -46,14 +46,13 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Table des matières</h2>
    
   <ul class="collapse">
-  <li><a href="#bibliographie" id="toc-bibliographie" class="nav-link active" data-scroll-target="#bibliographie">Bibliographie</a>
+  <li><a href="#bibliographie-par-thème" id="toc-bibliographie-par-thème" class="nav-link active" data-scroll-target="#bibliographie-par-thème">Bibliographie par thème</a>
   <ul class="collapse">
-  <li><a href="#à-lire-en-priorité" id="toc-à-lire-en-priorité" class="nav-link" data-scroll-target="#à-lire-en-priorité">À lire en priorité</a></li>
-  <li><a href="#ouvrages-de-référence-sur-le-traitement-de-limage-numérique" id="toc-ouvrages-de-référence-sur-le-traitement-de-limage-numérique" class="nav-link" data-scroll-target="#ouvrages-de-référence-sur-le-traitement-de-limage-numérique">Ouvrages de référence sur le traitement de l’image numérique</a></li>
-  <li><a href="#essais-sur-limage-numérique" id="toc-essais-sur-limage-numérique" class="nav-link" data-scroll-target="#essais-sur-limage-numérique">Essais sur l’image numérique</a></li>
-  <li><a href="#essais-sur-lart-numérique-et-génératif" id="toc-essais-sur-lart-numérique-et-génératif" class="nav-link" data-scroll-target="#essais-sur-lart-numérique-et-génératif">Essais sur l’art numérique et génératif</a></li>
-  <li><a href="#essais-et-ouvrages-de-référence-sur-la-techtonique" id="toc-essais-et-ouvrages-de-référence-sur-la-techtonique" class="nav-link" data-scroll-target="#essais-et-ouvrages-de-référence-sur-la-techtonique">Essais et ouvrages de référence sur la techtonique</a></li>
-  <li><a href="#autres-incontournables" id="toc-autres-incontournables" class="nav-link" data-scroll-target="#autres-incontournables">Autres / incontournables</a></li>
+  <li><a href="#image-numérique-arts-visuels" id="toc-image-numérique-arts-visuels" class="nav-link" data-scroll-target="#image-numérique-arts-visuels">Image numérique (Arts visuels)</a></li>
+  <li><a href="#art-génératif-et-théorie-de-linformation" id="toc-art-génératif-et-théorie-de-linformation" class="nav-link" data-scroll-target="#art-génératif-et-théorie-de-linformation">Art génératif et théorie de l’information</a></li>
+  <li><a href="#art-textile-et-informatique" id="toc-art-textile-et-informatique" class="nav-link" data-scroll-target="#art-textile-et-informatique">Art textile et informatique</a></li>
+  <li><a href="#traitement-de-limage-numérique-mathématiquesinformatique" id="toc-traitement-de-limage-numérique-mathématiquesinformatique" class="nav-link" data-scroll-target="#traitement-de-limage-numérique-mathématiquesinformatique">Traitement de l’image numérique (mathématiques/informatique)</a></li>
+  <li><a href="#cadre-théorique-du-projet" id="toc-cadre-théorique-du-projet" class="nav-link" data-scroll-target="#cadre-théorique-du-projet">Cadre théorique du projet</a></li>
   </ul></li>
   </ul>
 </nav>
@@ -66,57 +65,58 @@ ul.task-list li input[type="checkbox"] {
 
 
 <div class="navbar p-3">
-<p><a href="index.html" class="me-4 ms-4">Accueil</a> <a href="code.html" class="me-4 ms-4">Code</a></p>
+<p><a href="index.html" class="me-4 ms-4">Accueil</a> <a href="bibliographie_zotero.html" class="me-4 ms-4">Bibliographie par auteur</a> <a href="code.html" class="me-4 ms-4">Code</a></p>
 </div>
-<section id="bibliographie" class="level1">
-<h1>Bibliographie</h1>
-<section id="à-lire-en-priorité" class="level2">
-<h2 class="anchored" data-anchor-id="à-lire-en-priorité">À lire en priorité</h2>
+<section id="bibliographie-par-thème" class="level1">
+<h1>Bibliographie par thème</h1>
+<p>Cette bibliographie est mise à jour manuellement. Pour accéder à la version la plus à jour, voir la section <a href="bibliographie_zotero.html">Bibliographie par auteur</a>.</p>
+<section id="image-numérique-arts-visuels" class="level2">
+<h2 class="anchored" data-anchor-id="image-numérique-arts-visuels">Image numérique (Arts visuels)</h2>
 <ul>
-<li><p>Manovich, L. (2001). The language of new media. MIT Press.</p></li>
-<li><p>Bense, M. (2007). Aesthetica : Introduction à la nouvelle esthétique. Éd. du Cerf.</p></li>
+<li>Cubitt, S. (2014). The practice of light : A genealogy of visual technologies from prints to pixels. The MIT press.</li>
+<li>Galloway, A. R. (2012). The interface effect. Polity Press.</li>
+<li>Lind, M. (2013). Abstraction. Whitechapel gallery.</li>
+<li>Manovich, L. (2001). The language of new media. The MIT Press.</li>
 </ul>
 </section>
-<section id="ouvrages-de-référence-sur-le-traitement-de-limage-numérique" class="level2">
-<h2 class="anchored" data-anchor-id="ouvrages-de-référence-sur-le-traitement-de-limage-numérique">Ouvrages de référence sur le traitement de l’image numérique</h2>
+<section id="art-génératif-et-théorie-de-linformation" class="level2">
+<h2 class="anchored" data-anchor-id="art-génératif-et-théorie-de-linformation">Art génératif et théorie de l’information</h2>
 <ul>
-<li>Gonzalez, R. C., &amp; Woods, R. E. (2008). Digital image processing (Third edition). Pearson Prentice Hall.</li>
-</ul>
-</section>
-<section id="essais-sur-limage-numérique" class="level2">
-<h2 class="anchored" data-anchor-id="essais-sur-limage-numérique">Essais sur l’image numérique</h2>
-<ul>
-<li>Manovich, L. (2001). The language of new media. MIT Press.</li>
-<li>Mitchell, W. J. (1992). The reconfigured eye : Visual truth in the post-photographic era. The MIT Press.</li>
-<li>Cubitt, S. (1998). Digital Aesthetics. SAGE Publications.</li>
-<li>Plant, S. (1998). Zeros + ones: Digital women + the new technoculture. Fourth Estate.</li>
-<li>Essinger, J. (2004). Jacquard’s web : How a hand-loom led to the birth of the information age. Oxford University Press.</li>
-</ul>
-</section>
-<section id="essais-sur-lart-numérique-et-génératif" class="level2">
-<h2 class="anchored" data-anchor-id="essais-sur-lart-numérique-et-génératif">Essais sur l’art numérique et génératif</h2>
-<ul>
-<li>Bense, M. (2007). Aesthetica : Introduction à la nouvelle esthétique. Éd. du Cerf</li>
-<li>Galanter, P. (2003). What is Generative Art ? Complexity Theory as a Context for Art Theory.</li>
-<li>Moles, A. A. (1972). Théorie de l’information et perception esthétique (Nouv. ed). Denoël/Gonthier.</li>
+<li>Bense, M. (2007). Aesthetica : Introduction à la nouvelle esthétique. Éd. du Cerf.</li>
+<li>Cook, S. (Éd.). (2016). Information (First published). Whitechapel Gallery, The MIT Press.</li>
+<li>Galanter, P. (s.&nbsp;d.). What is Generative Art ? Complexity Theory as a Context for Art Theory.</li>
+<li>Larsen, L. B. (Éd.). (2014). Networks : Theodor W. Adorno, Pamela Allara, Lawrence Alloway … MIT Press.</li>
+<li>Moles, A. A. (1972). Theorie de l’information et perception esthetique (Nouv. ed). Denoël/Gonthier.</li>
 <li>Rosen, M. &amp; Zentrum für Kunst und Medientechnologie Karlsruhe (Éds.). (2011). A little-known story about a movement, a magazine, and the computer’s arrival in art : New Tendencies and Bit International, 1961 - 1973. MIT Press.</li>
-<li>Galerija suvremene umjetnosti. (1968–1972). Bit International. Zagreb: Galerija suvremene umjetnosti.</li>
+<li>Shanken, E. A. (Éd.). (2015). Systems. MIT Press [u.a.].</li>
 </ul>
 </section>
-<section id="essais-et-ouvrages-de-référence-sur-la-techtonique" class="level2">
-<h2 class="anchored" data-anchor-id="essais-et-ouvrages-de-référence-sur-la-techtonique">Essais et ouvrages de référence sur la techtonique</h2>
+<section id="art-textile-et-informatique" class="level2">
+<h2 class="anchored" data-anchor-id="art-textile-et-informatique">Art textile et informatique</h2>
 <ul>
-<li>Hegel, G. W. F., &amp; Jankélévitch, S. (1979). Esthétique. Flammarion.</li>
-<li>Semper, G. (2004). Style in the technical and tectonic arts : Or, practical aesthetics. Getty research Institute.</li>
-<li>Semper, G., Châtelet, A.-M., Gnehm, M., &amp; Biétry, L. (2020). Gottfried Semper : Écrits sur l’architecture. Infolio.</li>
+<li>Essinger, J. (2004). Jacquard’s web : How a hand-loom led to the birth of the information age (1. publ). Oxford University Press.</li>
+<li>Plant, S. (1998). Zeros + ones : Digital women + the new technoculture. Fourth Estate.</li>
 </ul>
 </section>
-<section id="autres-incontournables" class="level2">
-<h2 class="anchored" data-anchor-id="autres-incontournables">Autres / incontournables</h2>
+<section id="traitement-de-limage-numérique-mathématiquesinformatique" class="level2">
+<h2 class="anchored" data-anchor-id="traitement-de-limage-numérique-mathématiquesinformatique">Traitement de l’image numérique (mathématiques/informatique)</h2>
 <ul>
-<li>Bertalanffy, L. von. (1969). General system theory foundations, development, applications. G. Braziller.</li>
-<li>Brunn, B., &amp; Posenenske, C. (Éds.). (2013). Charlotte Posenenske : Manifesto (1. Aufl). DISTANZ Verl.</li>
-<li>Semper, G., Kalinowski, I., &amp; Thibault, E. (2022). L’art textile. Editions B2.</li>
+<li>Dougherty, E. R., &amp; Giardina, C. R. (1987). Matrix structured image processing. Prentice-Hall.</li>
+<li>Gonzalez, R. C., &amp; Woods, R. E. (2008). Digital image processing (Third edition). Pearson Prentice Hall.</li>
+<li>Maître, H. (2003). Le traitement des images. Hermès Science Publications.</li>
+</ul>
+</section>
+<section id="cadre-théorique-du-projet" class="level2">
+<h2 class="anchored" data-anchor-id="cadre-théorique-du-projet">Cadre théorique du projet</h2>
+<ul>
+<li>Benjamin, W., &amp; Underwood, J. A. (2008). The work of art in the age of mechanical reproduction. Penguin.</li>
+<li>Bertalanffy, L. von, Laszlo, E., &amp; Chabrol, J.-B. (1993). Théorie générale des systèmes. Dunod.</li>
+<li>Brunn, B., &amp; Posenenske, C. (Éds.). (2013). Charlotte Posenenske : Manifesto (1. Aufl). DISTANZ Verl.</li>
+<li>Flusser, V. (2004). Pour une philosophie de la photographie. Circé.</li>
+<li>Frampton, K., &amp; Cava, J. (avec Graham Foundation for Advanced Studies in the Fine Arts). (1995). Studies in tectonic culture : The poetics of construction in nineteenth and twentieth century architecture. MIT Press.</li>
+<li>Semper, G. (2004). Style in the technical and tectonic arts : Or, practical aesthetics. Getty research Institute.</li>
+<li>Weibel, P. (2005). Beyond art : A third culture a comparative study in cultures, art and science in 20th century Austria and Hungary [exposition, Ludwig museum Budapest, October 17 - November 23, 1996. Neue Galerie Graz am Landesmuseum Joanneum, Austria, February 7 - March 30, 1997. MUKHA - Museum van hedebdaagse kunst, Antwerp, Belgium, September 19 - December 6, 1998]. Springer.</li>
+<li>Wiener, N., Hill, D., &amp; Mitter, S. (2019). Cybernetics : Or Control and communication in the animal and the machine (Reissue of the 1961 second edition). MIT Press.</li>
 </ul>
 </section>
 </section>
