--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ ul.task-list li input[type="checkbox"] {
 
 
 <div class="navbar p-3">
-<p><a href="bibliographie.html" class="me-4 ms-4">Bibliographie</a> <a href="code.html" class="me-4 ms-4">Code</a></p>
+<p><a href="bibliographie_zotero.html" class="me-4 ms-4">Bibliographie par auteur</a> <a href="bibliographie.html" class="me-4 ms-4">Bibliographie par thème</a> <a href="code.html" class="me-4 ms-4">Code</a></p>
 </div>
 <section id="erreur" class="level1">
 <h1>erreuR</h1>
